--- a/src/css/MultipleIssue.css
+++ b/src/css/MultipleIssue.css
@@ -2,7 +2,7 @@
   /*-------------------------------------------------------------
    * theme
    *-----------------------------------------------------------*/
-  --dark-theme: #00836b;
+  --theme-backlog: #00836b;
 
   /*-------------------------------------------------------------
    * color
